<resources>
    <string name="app_name">Procrastinot</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task_tab_label">Tasks</string>
    <string name="notes_tab_label">Notes</string>
    <string name="journal_tab_label">Journal</string>
    <string name="hint_task">Task...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Task not saved because it is empty.</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="hint_weight">Enter task weight...</string>
    <string name="hint_type">Enter task type...</string>
    <string name="task_weight">Task Weight</string>
    <string name="text_easy">Easy</string>
    <string name="text_medium">Medium</string>
    <string name="text_hard">Hard</string>
    <string name="notes_description">Notes/Description</string>
    <string name="notes_hint">Add notes...</string>
    <string name="journal_hint">Add journal entry...</string>
    <string name="view_notes">View Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_tab_description">Daily Notes</string>
    <string name="journal_tab_description">Daily Journal</string>

    <string name="date">Date:</string>
    <string name="datepicker">datePicker</string>
    <string name="change_date">Change Date</string>
    <string name="current_date">Current Date</string>

    <string-array name="color_labels_array">
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
    </string-array>

</resources>