<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_task"
        style="@style/text_view_style"
        android:hint="@string/hint_task"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_type"
        style="@style/text_view_style"
        android:hint="@string/hint_type"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/weight_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/task_weight" />

    <RadioGroup
        android:id="@+id/edit_weight_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_easy" />

            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/text_medium" />

            <RadioButton
                android:id="@+id/radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_hard" />


    </RadioGroup>

    <EditText
        android:id="@+id/notes_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/notes_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine|textAutoComplete" />
    </ScrollView>

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />
</LinearLayout>