<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/clear_data"
        android:orderInCategory="100"
        android:title="@string/clear_all_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_date"
        android:icon="@drawable/ic_calendar"
        android:orderInCategory="20"
        android:title="@string/change_date"
        app:showAsAction="always" />
    <item
        android:id="@+id/current_date"
        android:orderInCategory="30"
        android:title="@string/current_date"
        android:text="mm/dd/yyyy"
        app:showAsAction="always" />
</menu>